--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,5 @@ itsdangerous==0.24
 python-dateutil==2.3
 pytz==2014.10
 six==1.8.0
+blinker==1.3
+-e git+https://github.com/ashimali/messenger.git#egg=messenger
