--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,5 @@ python-dateutil==2.3
 pytz==2014.10
 six==1.8.0
 blinker==1.3
+redis==2.10.3
 -e git+https://github.com/ashimali/messenger.git#egg=messenger
